--- a/src/Clientes/RegistroClientes.form
+++ b/src/Clientes/RegistroClientes.form
@@ -77,6 +77,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="txt_nombre_cli">
+      <BindingProperties>
+        <BindingProperty name="nextFocusableComponent" source="txt_apellido_cli" target="txt_nombre_cli" targetPath="nextFocusableComponent" updateStrategy="0" immediately="false"/>
+      </BindingProperties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_nombre_cliActionPerformed"/>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txt_nombre_cliKeyTyped"/>
@@ -98,6 +101,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="txt_rtn_cliente">
+      <BindingProperties>
+        <BindingProperty name="nextFocusableComponent" source="txt_num_id_cli" target="txt_rtn_cliente" targetPath="nextFocusableComponent" updateStrategy="0" immediately="false"/>
+      </BindingProperties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_rtn_clienteActionPerformed"/>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txt_rtn_clienteKeyTyped"/>
@@ -119,6 +125,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="txt_cli_id">
+      <BindingProperties>
+        <BindingProperty name="nextFocusableComponent" source="txt_nombre_cli" target="txt_cli_id" targetPath="nextFocusableComponent" updateStrategy="0" immediately="false"/>
+      </BindingProperties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_cli_idActionPerformed"/>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txt_cli_idKeyTyped"/>
@@ -214,6 +223,9 @@
       </SubComponents>
     </Container>
     <Component class="javax.swing.JTextField" name="txt_apellido_cli">
+      <BindingProperties>
+        <BindingProperty name="nextFocusableComponent" source="txt_rtn_cliente" target="txt_apellido_cli" targetPath="nextFocusableComponent" updateStrategy="0" immediately="false"/>
+      </BindingProperties>
       <Events>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txt_apellido_cliKeyTyped"/>
       </Events>
@@ -301,6 +313,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="txt_num_id_cli">
+      <BindingProperties>
+        <BindingProperty name="nextFocusableComponent" source="txt_dir_cli" target="txt_num_id_cli" targetPath="nextFocusableComponent" updateStrategy="0" immediately="false"/>
+      </BindingProperties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_num_id_cliActionPerformed"/>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txt_num_id_cliKeyTyped"/>
@@ -312,6 +327,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="txt_dir_cli">
+      <BindingProperties>
+        <BindingProperty name="nextFocusableComponent" source="btn_guardar" target="txt_dir_cli" targetPath="nextFocusableComponent" updateStrategy="0" immediately="false"/>
+      </BindingProperties>
       <Events>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txt_dir_cliKeyTyped"/>
       </Events>
