--- a/src/contactos/contacto_proveedor/ContactoP.form
+++ b/src/contactos/contacto_proveedor/ContactoP.form
@@ -74,25 +74,6 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Container class="javax.swing.JScrollPane" name="jScrollPane1">
-      <AuxValues>
-        <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
-      </AuxValues>
-      <Constraints>
-        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="370" y="290" width="107" height="-1"/>
-        </Constraint>
-      </Constraints>
-
-      <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
-      <SubComponents>
-        <Component class="javax.swing.JTextPane" name="Numero_Telefonico">
-          <Events>
-            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="Numero_TelefonicoKeyTyped"/>
-          </Events>
-        </Component>
-      </SubComponents>
-    </Container>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
         <Property name="text" type="java.lang.String" value="Extenci&#xf3;n N&#xfa;merica"/>
@@ -193,6 +174,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="Correo">
+      <BindingProperties>
+        <BindingProperty name="nextFocusableComponent" source="Celular" target="Correo" targetPath="nextFocusableComponent" updateStrategy="0" immediately="false"/>
+      </BindingProperties>
       <Events>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="CorreoKeyTyped"/>
       </Events>
@@ -203,6 +187,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="Celular">
+      <BindingProperties>
+        <BindingProperty name="nextFocusableComponent" source="jButton1" target="Celular" targetPath="nextFocusableComponent" updateStrategy="0" immediately="false"/>
+      </BindingProperties>
       <Events>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="CelularKeyTyped"/>
       </Events>
@@ -281,6 +268,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="idcc">
+      <BindingProperties>
+        <BindingProperty name="nextFocusableComponent" source="extencion" target="idcc" targetPath="nextFocusableComponent" updateStrategy="0" immediately="false"/>
+      </BindingProperties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="idccActionPerformed"/>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="idccKeyTyped"/>
@@ -292,6 +282,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="extencion">
+      <BindingProperties>
+        <BindingProperty name="nextFocusableComponent" source="Numero_Telefonico" target="extencion" targetPath="nextFocusableComponent" updateStrategy="0" immediately="false"/>
+      </BindingProperties>
       <Events>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="extencionKeyTyped"/>
       </Events>
@@ -356,6 +349,19 @@
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="590" y="310" width="-1" height="-1"/>
+        </Constraint>
+      </Constraints>
+    </Component>
+    <Component class="javax.swing.JTextField" name="Numero_Telefonico">
+      <BindingProperties>
+        <BindingProperty name="nextFocusableComponent" source="Correo" target="Numero_Telefonico" targetPath="nextFocusableComponent" updateStrategy="0" immediately="false"/>
+      </BindingProperties>
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="Numero_TelefonicoKeyTyped"/>
+      </Events>
+      <Constraints>
+        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+          <AbsoluteConstraints x="370" y="290" width="100" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
